--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@nuxtjs/style-resources": "^1.2.1",
     "body-parser": "^1.20.0",
     "core-js": "^3.19.3",
+    "docx": "^8.2.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "intl-tel-input": "^18.1.3",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.0",
     "nuxt": "^2.15.8",
+    "pdf-lib": "^1.17.1",
     "request": "^2.88.2",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
