--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "request": "^2.88.2",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
+    "vue-signature-pad": "2.0.4",
     "vue-template-compiler": "^2.6.14",
     "vue-tiny-slider": "^0.1.39",
     "webpack": "^4.46.0"
