--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.1",
     "intl-tel-input": "^18.1.3",
     "mysql": "^2.18.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.0",
     "nuxt": "^2.15.8",
     "pdf-lib": "^1.17.1",
