--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/style-resources": "^1.2.1",
+    "axios": "^0.21.1",
     "body-parser": "^1.20.0",
     "core-js": "^3.19.3",
     "docx": "^8.2.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "form-data": "^4.0.0",
     "intl-tel-input": "^18.1.3",
     "mysql": "^2.18.1",
-    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.0",
     "nuxt": "^2.15.8",
     "pdf-lib": "^1.17.1",
