--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "financialmatch",
+  "name": "claimchecker",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -10,30 +10,21 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
-    "@nuxtjs/style-resources": "^1.2.1",
-    "axios": "^0.21.1",
-    "body-parser": "^1.20.0",
-    "core-js": "^3.19.3",
+    "axios": "^0.24.0",
+    "body-parser": "^1.20.2",
+    "core-js": "^3.32.0",
     "docx": "^8.2.2",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "form-data": "^4.0.0",
-    "intl-tel-input": "^18.1.3",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.9.0",
-    "nuxt": "^2.15.8",
-    "pdf-lib": "^1.17.1",
-    "request": "^2.88.2",
-    "vue": "^2.6.14",
-    "vue-server-renderer": "^2.6.14",
-    "vue-signature-pad": "2.0.4",
-    "vue-template-compiler": "^2.6.14",
-    "vue-tiny-slider": "^0.1.39",
-    "webpack": "^4.46.0"
+    "nodemailer": "^6.9.4",
+    "nuxt": "^2.15.7",
+    "pdf-lib": "^1.17.1"
   },
   "devDependencies": {
-    "@nuxt/types": "~2.15.0",
-    "sass": "^1.53.0",
-    "sass-loader": "^10.3.1"
+    "@nuxtjs/style-resources": "^1.2.1",
+    "sass": "^1.37.5",
+    "sass-loader": "^10.2.0"
   }
 }
